--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 
   <body>
       <h1>
-          haha this is nice
+<img src="https://avatars.githubusercontent.com/u/98328982?v=4">
+
       </h1>
     Hello there, awesome person! 
   </body>
