inserted my favourite sites

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     </head>
 
   <body>
+      youtube
+      MyFlixer
+      Pinterest
       <h1>
 <img src="https://avatars.githubusercontent.com/u/98328982?v=4">
 
