--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <body>
       <h1>
           <ul>
-              <li> wwww.pinterest.com </li>
+      <li>My favorite site is <a href="https://github.com">GitHub</a>!</li>
               <li> www.yutube.com </li>
               <li> www.noisli.com </li>
           </ul>
